<resources>
    <string name="app_name">MoodLink</string>
    <string name="package_name">com.example.tim.moodlink</string>

    <!--Main Screen Layout-->

    <string name="welcome">Welcome back %1$s !</string>
    <string name="legend">You did well today !</string>

    <!--Drawer Menu Layout-->

    <string-array name="items_drawer">
        <item>MoodLink</item>
    </string-array>

    <string name="menu1">Emergency Contacts</string>
    <string name="menu2">Mood Changes Graph </string>
    <string name="menu3">Settings</string>

    <!--First Launch Layout-->

    <string name="first_launch_title">Welcome in\nMoodlink</string>
    <string name="first_setup_info">Please fill up those few information for us to know you better.</string>
    <string name="username_text">Your Name</string>
    <string name="username_hint">Please enter your name here …</string>
    <string name="first_contact_text">Please enter your practitioner\'s information.</string>
    <string name="first_pract_name_hint">Please enter his/her name …</string>
    <string name="first_pract_phone_hint">Please enter his/her phone number …</string>
    <string name="first_pract_email_hint">Please enter his/her email address …</string>
    <string name="validate_button_text">Save</string>


    <!--Emergency Contacts Layout-->

    <string name="emerg_title">Emergency Contacts</string>

    <string-array name="contacts_longclick_options">
        <item>Modify</item>
        <item>Delete</item>
    </string-array>


    <!--Modify contact Layout-->

    <string name="modify_contact_title">Modify\nContact</string>

    <!--New contact Layout-->
    <string name="new_contact_title">New\nContact</string>

    <string name="cat_text">Category</string>
    <string name="cat_hint">Select one …</string>

    <string name="name_text">Name</string>
    <string name="name_hint">Enter a name …</string>

    <string name="phone_text">Phone Number</string>
    <string name="phone_hint">Enter a phone number …</string>

    <string name="email_text">Email Address</string>

    <string name="email_hint">Enter a email address …</string>
    <string-array name="cat_items_new_contact">
        <item>Practitioner</item>
        <item>Family</item>
        <item>Friend</item>
        <item>Co-Worker</item>
    </string-array>

    <!--Graph Layout-->

    <string name="graph_title">Mood\nChanges</string>

    <!--Setting Layout-->

    <string name="settings_title">Settings</string>

    <string-array name="value_items_settings">
        <item>Luminosity</item>
        <item>Accelerometer</item>
        <item>Location</item>
        <item>Phone</item>
        <item>Camera</item>
    </string-array>

    <!--Image Processing-->

    <string-array name="anger_pictures">
        <item>/storage/emulated/0/Moodlink/Pictures/Training/anger/anger_01.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/anger/anger_02.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/anger/anger_03.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/anger/anger_04.jpg</item>
    </string-array>

    <string-array name="disgust_pictures">
        <item>/storage/emulated/0/Moodlink/Pictures/Training/disgust/disgust_01.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/disgust/disgust_02.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/disgust/disgust_03.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/disgust/disgust_04.jpg</item>
    </string-array>

    <string-array name="happiness_pictures">
        <item>/storage/emulated/0/Moodlink/Pictures/Training/happiness/happiness_01.jpg</item>
        <!--<item>/storage/emulated/0/Moodlink/Pictures/Training/happiness/happiness_02.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/happiness/happiness_03.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/happiness/happiness_04.jpg</item>-->

    </string-array>

    <string-array name="neutrality_pictures">
        <item>/storage/emulated/0/Moodlink/Pictures/Training/neutrality/neutrality_01.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/neutrality/neutrality_02.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/neutrality/neutrality_03.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/neutrality/neutrality_04.jpg</item>

    </string-array>

    <string-array name="sadness_pictures">
        <item>/storage/emulated/0/Moodlink/Pictures/Training/sadness/sadness_01.jpg</item>
        <!--<item>/storage/emulated/0/Moodlink/Pictures/Training/sadness/sadness_02.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/sadness/sadness_03.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/sadness/sadness_04.jpg</item>-->

    </string-array>

    <string-array name="surprise_pictures">
        <item>/storage/emulated/0/Moodlink/Pictures/Training/surprise/surprise_01.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/surprise/surprise_02.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/surprise/surprise_03.jpg</item>
        <item>/storage/emulated/0/Moodlink/Pictures/Training/surprise/surprise_04.jpg</item>

    </string-array>

</resources>


