<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contacts_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ModifyContactActivity">
    <View android:id="@+id/rectangle_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#1fb6ff"
        android:visibility="visible"
        android:layout_marginBottom="-75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle"
        android:id="@+id/Circle"
        android:layout_below="@+id/rectangle_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/modify_contact_title"
        android:id="@+id/welcome_textView"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#47525e"
        android:layout_alignLeft="@+id/Circle"
        android:layout_alignStart="@+id/Circle"
        android:layout_alignRight="@+id/Circle"
        android:layout_alignEnd="@+id/Circle"
        android:layout_alignBottom="@+id/Circle"
        android:layout_below="@+id/rectangle_title" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/return_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/return_arrow"
        android:background="#1fb6ff"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/validate_button"
        android:src="@mipmap/check"
        android:background="#1fb6ff"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp" />

    <View android:id="@+id/rectangle_shadow"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#b0bec5"
        android:visibility="visible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/Circle"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/rectangle_shadow"
        android:layout_alignLeft="@+id/rectangle_shadow"
        android:layout_alignStart="@+id/rectangle_shadow"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#d0bcf4"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_text"
            android:textSize="20sp"
            android:textColor="#000000" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner_category"
            android:spinnerMode="dropdown"
            android:layout_marginRight="20dp"
            android:forceHasOverlappingRendering="false"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:outlineProvider="bounds"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="20sp"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/name_editText"
            android:layout_marginBottom="20dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:digits="AZERTYUIOPQSGHJKLMWXCVBNazertyuiopqsdfghjklmwxcvbn 0123456789éèàçù"
            android:contextClickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_text"
            android:textSize="20sp"
            android:id="@+id/textView"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_editText"
            android:layout_marginBottom="20dp"
            android:hint="@string/phone_hint"
            android:phoneNumber="true"
            android:digits="0123456789 +()-" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="20sp"
            android:id="@+id/textView2"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_editText"
            android:hint="@string/email_hint"
            android:digits="AZERTYUIOPQSGHJKLMWXCVBNazertyuiopqsdfghjklmwxcvbn0123456789.@-_" />

    </LinearLayout>

</RelativeLayout>
