<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contacts_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AddContactActivity">

    <View android:id="@+id/rectangle_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#1fb6ff"
        android:visibility="visible"
        android:layout_marginBottom="-75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle"
        android:id="@+id/Circle"
        android:layout_below="@+id/rectangle_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_launch_title"
        android:id="@+id/welcome_textView"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#47525e"
        android:layout_alignLeft="@+id/Circle"
        android:layout_alignStart="@+id/Circle"
        android:layout_alignRight="@+id/Circle"
        android:layout_alignEnd="@+id/Circle"
        android:layout_alignBottom="@+id/Circle"
        android:layout_below="@+id/rectangle_title" />

    <View android:id="@+id/rectangle_shadow"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#b0bec5"
        android:visibility="visible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/Circle"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button_save"
        android:background="#1fb6ff"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/check" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/rectangle_shadow"
        android:layout_alignLeft="@+id/rectangle_shadow"
        android:layout_alignStart="@+id/rectangle_shadow"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#d0bcf4"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:nestedScrollingEnabled="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/rectangle_shadow"
                android:layout_alignStart="@+id/rectangle_shadow"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#d0bcf4"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/first_setup_info"
                    android:id="@+id/textView3"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/username_editText"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:digits="AZERTYUIOPQSGHJKLMWXCVBNazertyuiopqsdfghjklmwxcvbn 0123456789éèàçù"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/first_contact_text"
                    android:id="@+id/textView4"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/first_contact_name_editText"
                    android:hint="@string/first_pract_name_hint"
                    android:inputType="textPersonName"
                    android:digits="AZERTYUIOPQSGHJKLMWXCVBNazertyuiopqsdfghjklmwxcvbn 0123456789éèàçù"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/first_contact_phone_editText"
                    android:hint="@string/first_pract_phone_hint"
                    android:phoneNumber="true"
                    android:digits="0123456789 +()-"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/first_contact_email_editText"
                    android:hint="@string/first_pract_email_hint"
                    android:digits="AZERTYUIOPQSGHJKLMWXCVBNazertyuiopqsdfghjklmwxcvbn0123456789.@-_"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</RelativeLayout>
