<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#47525e"
        android:textSize="30sp"
        android:gravity="center"
        android:minHeight="40sp"
        android:text="@string/app_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton_DrawerOpened"
        android:scaleType="fitXY"
        android:src="@mipmap/menu_icon"
        android:adjustViewBounds="true"
        android:background="#ecf7fc"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp" />

    <View android:id="@+id/rectangle_title"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="#1fb6ff"
        android:visibility="visible"
        android:layout_marginTop="40dp"
        android:paddingLeft="50dp"
        android:paddingRight="-50dp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rectangle_title">

        <LinearLayout
            android:id="@+id/block_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="left|center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView"
                android:src="@mipmap/contact"
                android:scaleType="fitXY" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#47525e"
                android:textSize="20sp"
                android:gravity="center"
                android:minHeight="40sp"
                android:text="@string/menu1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="left|center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView2"
                android:src="@mipmap/chart"
                android:scaleType="fitXY" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#47525e"
                android:textSize="20sp"
                android:gravity="center"
                android:minHeight="40sp"
                android:text="@string/menu2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView3"
                android:src="@mipmap/settings"
                android:scaleType="fitXY" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#47525e"
                android:textSize="20sp"
                android:gravity="center"
                android:minHeight="40sp"
                android:text="@string/menu3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
